  - https://code.launchpad.net/~mwilck/duplicity/0.7-series/+merge/301492
  - merge fixes setsid usage in functional testing.
* Fixed bug #1612472 with patch from David Cuthbert
  - Restore from S3 fails with --with-prefix-archive if prefix includes '/'
* Merged in lp:~arashad.ahamad/duplicity/duplicity_latest
  - Changes for connecting to IBM Bluemix ObjectStorage.  See man page.


New in v0.7.09 (2016/07/24)
---------------------------
* Fixed bug #1600692 with patch from Wolfgang Rohdewald
  - Allow symlink to have optional trailing slash during verify.
* Merged in lp:~aaron-whitehouse/duplicity/07-fix_deja_dup_error_on_locked_files
  - Revert log.Error to log.Warn, as it was prior to the merge in rev 1224,
    as this was affecting other applications (e.g. deja dup; Bug #1605939).
* Merged in lp:~duplicity-team/duplicity/po-updates


New in v0.7.08 (2016/07/02)
---------------------------
* Merged in lp:~noizyland/duplicity/fix_azurebackend_typo
  - Fix typo in error handling code
* Merged in lp:~ghoz/duplicity/swift-prefix
  - adds the abiliy to use path in the swift backend, in order to have multiple
    backups to the same container neatly organized.
* Fixed bug #1573957 with patches from Dmitry Nezhevenko
  - upload last chunk with files_upload_session_finish to avoid extra request
  - upload small files using non-chunked api
* Fixed bug #1586934 with patches from Dmitry Nezhevenko
  - fixes error handling in wrapper
* Fixed bug #1586992 with patches from Dmitry Nezhevenko
  - Patch adds _delete_list to Par2Backend. And _delete_list fallbacks to
    _delete calls if wrapped backend has no _delete_list.
* Fixed bug #1589038 with patches from Malte Schröder
  - Added ignore_case option to selection functions
* Merged in lp:~mstoll-de/duplicity/b2-reauth
  - Fixes bug #1588503 b2: large uploads fail due to expired auth token
* Merged in lp:~aaron-whitehouse/duplicity/fix_pep8
  - Fix PEP8 error in onedrivebackend.py (space before bracket)